FIX: styling on smaller height devices

--- a/src/scss/music-player.scss
+++ b/src/scss/music-player.scss
@@ -9,8 +9,13 @@ body {
   flex-flow: column;
   font-family: 'League Spartan', sans-serif;
 
+  @media screen and (max-height: 750px) {
+    min-height: 100%;
+    margin-top: 25px;
+  }
+
   .player {
-    height: calc(100vh - 32%);
+    height: 100%;
     width: calc(100% - 32px);
     max-height: 500px;
     background-color: #e7e7e7;
@@ -19,8 +24,13 @@ body {
     position: relative;
 
     @media screen and (min-width: 376px) {
+      height: calc(100vh - 32%);
       max-width: 400px;
       margin: 0 16px;
+    }
+
+    @media screen and (min-width: 376px) and (max-height: 750px) {
+      min-height: 500px;
     }
 
     &__block {
@@ -74,7 +84,11 @@ body {
       max-width: calc(100% - 32px);
       margin: 0 auto;
       position: relative;
-      top: -5px;
+      top: 0;
+
+      @media screen and (min-width: 376px) {
+        top: -5px;
+      }
 
       &--control {
         cursor: pointer;
